--- a/day1.Rmd
+++ b/day1.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "Day 1"
 description: |
-  Limitations of common graphical elements
+  Limitations of common graphical elements: why we should work to 
+  improve graphicacy.  
 ---
 
 ```{r setup, include=FALSE}
