--- a/index.Rmd
+++ b/index.Rmd
@@ -6,8 +6,7 @@ description: |
 site: distill::distill_website
 ---
 
-
-## Introduction
+## Welcome
 
 The workshop has three sessions focusing on different aspects of storytelling with data. 
 
@@ -22,6 +21,6 @@ The workshop has three sessions focusing on different aspects of storytelling wi
   </tr>
   <tr>
     <td><img src="images/intro-3.png" alt="stacked-bar chart" style="width:300px;height:188px"></td>
-    <td>[Day 3](day3.html) Case study: Thinking critically about visual information</td>
+    <td>[Day 3](day3.html) Thinking critically about visual information, a case study</td>
   </tr>
 </table>
