--- a/day1.Rmd
+++ b/day1.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Day 1"
 description: |
-  Limitations of common graphical elements: why we should work to 
-  improve graphicacy.  
+  Limitations of common graphical elements: why graphicacy matters.  
 ---
 
 ```{r setup, include=FALSE}
