--- a/day2.Rmd
+++ b/day2.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Day 2"
 description: |
-  Expanding your graphical repertoire: which graph types match 
-  which data structures. 
+  Expanding your graphical repertoire: matching graph types to  
+  data structures. 
 ---
 
 ```{r setup, include=FALSE}
