--- a/about.Rmd
+++ b/about.Rmd
@@ -10,6 +10,9 @@ description: |
 
 I started doing data visualization work with an engineering education research group around 2008 and haven't stopped. The iterative process we developed to  "find the story" in our data has been instrumental in shaping my approach to data graphics. You can read more about our research at [https://midfield.online/](https://midfield.online/). 
 
+I occasionally write about visual rhetoric, graph design, and R on my [Data Stories](https://graphdr.github.io/data-stories/) blog.  
+
+
 **Music**
 
 My dad was a guitar player and taught me my first chords. I've been songwriting and performing since my teens. A favorite musical pilgrimage is the annual [Swannanoa Gathering](https://swangathering.com/) near Asheville, NC in late July. I've posted some draft tracks to [SoundCloud](https://soundcloud.com/richardlaytonmusic). 
