--- a/session2.Rmd
+++ b/session2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Day 2"
+title: "Session 2"
 description: |
   Expanding your graphical repertoire: matching graph types to  
   data structures. 
