--- a/session1.Rmd
+++ b/session1.Rmd
@@ -1,29 +1,15 @@
 ---
 title: "Session 1"
 description: |
-  Perception, reasoning, and credibility: Limitations of common visual elements.
+  Limitations of common graph types. Demonstrating how to avoid the  
+  limitations to improve perception, reasoning, and credibility. 
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-
-# The rhetorical situation 
-
-*logos*
-: Displaying evidence and reasoning   
-
-*ethos*
-: Conveying credibility    
-
-*pathos*
-: Accommodating audience needs, values, and priorities    
-
-
-
+ 
 [slides](slides/slides-day1-01.html)
-
-
 
 
