--- a/index.Rmd
+++ b/index.Rmd
@@ -55,3 +55,12 @@ In the third session we study the visual rhetoric of a deliberate visual lie in 
   </tr>
 </table>
 
+
+## Contact
+
+<https://graphdr.github.io/data-stories/>
+
+<https://github.com/graphdr>
+
+<a href="mailto:graphdoctor@gmail.com">graphdoctor@gmail.com</a>
+
