--- a/index.Rmd
+++ b/index.Rmd
@@ -10,57 +10,22 @@ site: distill::distill_website
 
 The workshop has three sessions focusing on different aspects of storytelling with data. 
 
-**Session 1: Limitations of common graph types**
-
-In the first session we demonstrate avoiding the perceptual limitations of common graph types to    
+<table>
+  <tr>
+    <td><img src="images/stacked-bar-preview.png" alt="stacked-bar chart" style="width:300px;height:160px"></td>
+    <td>**Session 1**<br>[Limitations of common graph types](session1.html)</td>
+  </tr>
   
-- Improve perception of stories in the data
-- Make it easier to reason quantitatively about the data
-- Thereby enhancing our credibility with the audience
-
-<table>
   <tr>
-    <td><img src="images/stacked-bar-preview.png" alt="stacked-bar chart" style="width:300px;height:165px"></td>
-    <td>[Limitations of common graph types](session1.html)</td>
+    <td><img src="images/diverging-stacked-bar-preview.png" alt="diverging stacked bar chart preview" style="width:300px;height:160px"></td>
+    <td>**Session 2**<br>[Expanding your graphical reprtoire](session2.html)</td>
   </tr>
-</table>
-
-**Session 2: Expanding your graphical repertoire**
-
-In the second session we illustrate a repertoire of graph types and how they are suited to specific data structures. The session should encourage you to: 
-
-- Understand the structure of one's data
-- Explore different graph types suited to the data. 
-- Keep reading and learning&mdash;an unfamiliar design may be just what you need.
-
-<table>
   <tr>
-    <td><img src="images/diverging-stacked-bar-preview.png" alt="diverging stacked bar chart preview" style="width:300px;height:165px"></td>
-    <td>[Expanding your graphical reprtoire](session2.html)</td>
-  </tr>
-</table>
-
-**Session 3: Critical thinking about visual information&mdash;a case study** 
-
-In the third session we study the visual rhetoric of a deliberate visual lie in the pursuit of restricting reproductive rights. We focus on 
-
-- How the authors abuse the conventions of visual rhetoric to serve their rhetorical goals  
-- What legitimate stories these data tell
-- What legitimate questions the data raise 
-
-<table>
-  <tr>
-    <td><img src="images/intro-3.png" alt="stacked-bar chart" style="width:300px;height:165px"></td>
-    <td>[Critical thinking about visual information](session3.html)</td>
+    <td><img src="images/intro-3.png" alt="stacked-bar chart" style="width:300px;height:160px"></td>
+    <td>**Session 3**<br>[Critical thinking about visual information](session3.html)</td>
   </tr>
 </table>
 
 
-## Contact
 
-<https://graphdr.github.io/data-stories/>
-
-<https://github.com/graphdr>
-
-<a href="mailto:graphdoctor@gmail.com">graphdoctor@gmail.com</a>
 
