--- a/session2.Rmd
+++ b/session2.Rmd
@@ -9,13 +9,20 @@ description: |
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+
+
 **Expanding your graphical repertoire**
 
-In the second session we illustrate a repertoire of graph types and how they are suited to specific data structures. The session should encourage you to: 
+In the second session we illustrate a repertoire of graph types and how they are suited to specific data structures and answering specific types of questions. 
 
-- Understand the structure of one's data
-- Explore different graph types suited to the data. 
-- Keep reading and learning&mdash;an unfamiliar design may be just what you need.
+<img src="images/evolution-preview.png" alt="diverging stacked bar chart preview">
+
+The session should encourage you to: 
+
+- Understand the structure of your data
+- Understand the type of question the data can answer 
+- Explore different graph types suited to the data and the question 
+- Keep reading and learning&mdash;an unfamiliar design may be just what you need
 
 [**slides**](slides/slides-day2-01.html)
  
